fix browser warning on small mobile screen issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,6 @@ h2 {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 28vh;
   background-color: #fff8dc;
 	box-shadow: 0 -6px 15px rgba(0, 0, 0, 0.3), 0 -10px 25px rgba(0, 0, 0, 0.2);
   justify-content: center;
